Article show and destroy

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,4 +2,8 @@
 <h1>
 <%= @article.title %>
 </h1>
+<div>
+<%= @article.content %>
+</div>
+<%= link_to 'destroy', article_path(@article.id), method: :delete %>
 </article>
