--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,13 +1,4 @@
 <div>
-  <%= form_with model: @category, class: 'form' do |f| %>
-    <div>
-      <%= f.label :name %>
-      <%= f.text_field :name, class: 'input' %>
-    </div>
-    <div>
-      <%= f.label :priority %>
-      <%= f.select :priority, [1, 2, 3, 4, 5], class: 'input' %>
-    </div>
-    <%= f.submit %>
-  <% end %>
+<h1>CatIndex</h1>
+
 </div>
