--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,78 @@
  *= require_tree .
  *= require_self
  */
+ body{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+ }
+
+ .nav{
+     width: 100%;
+     border-bottom: rgb(105, 103, 103) solid 1px;
+     display: flex;
+ }
+
+ .nav-cat{
+     margin-left: auto;
+     margin-right: auto;
+     margin-top: 20px;
+     margin-bottom: 20px;
+     width: 500px;
+     border: 0;
+ }
+
+ .nav-cat a{
+    margin-left: 2.57%;
+    margin-right: 2.57%;
+ }
+
+ .nav a{
+    text-decoration: none;
+    color:rgb(105, 103, 103)
+ }
+
+ .nav a:hover{
+     color:rgb(209, 96, 51);
+ }
+
+ .nav-sess{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-right: 3%;
+    width:130px;
+ }
+
+ .nav-sess a{
+    margin-right: 10px;
+ }
+
+ footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 75px; 
+    background-color:pink;
+    display: flex;
+ }
+ footer div{
+    margin: 0px 30px;
+ }
+
+ .contact{
+     display: flex;
+     align-items: center;
+     width: 50%;
+     float: right;
+    justify-content: flex-end;
+ }
+
+ .contact a{
+     font-size: 23px;
+     margin: 0px 5px;
+ }
+
+ .created{
+    display: flex;
+    align-items: center;
+    width: 50%;
+ }
+ 
