--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,16 @@
 <div>
-<h1>CatIndex</h1>
+    <h1>CatIndex</h1>
 
+    <div class="nav">
+        <div class="nav-cat">
+            <%= link_to 'Gun'%>
+            <%= link_to 'Toy'%>
+            <%= link_to 'Utility'%>
+            <%= link_to 'Hound'%>
+            <%= link_to 'Terrier'%>
+            <%= link_to 'Working'%>
+            <%= link_to 'Pastoral'%>
+        </div>
+        
+    </div>
 </div>
