--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,13 +1,15 @@
-<div>
+<div class="container">
   <%= form_with model: @user, class: 'form' do |f| %>
-    <div>
-      <%= f.label :name, class: "label | text-is-white" %>
+    <div class="field">
+      <%= f.label :name, class: "label" %>
       <%= f.text_field :name, class: "input" %>
     </div>
-    <div>
-      <%= f.label :username, class: "label | text-is-white" %>
+    <div class="field">
+      <%= f.label :username, class: "label" %>
       <%= f.text_field :username, class: "input" %>
     </div>
-    <%= f.submit%>
+    <div class="btn">
+    <%= f.submit %>
+    </div>
   <% end %>
 </div>
