--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,2 +1,24 @@
 <h1>Categories#show</h1>
 <p>Find me in app/views/categories/show.html.erb</p>
+<div class="art-container">
+    <div class="top-container">
+        <div class="main-article">
+            main
+        </div>
+        <div class="right-articles">
+            <div class="article">
+                a
+            </div>
+            <div class="article">
+            </div>
+        </div>
+    </div>
+    <div class="bot-container">
+        <div class="article">
+        </div>
+        <div class="article">
+        </div>
+        <div class="article">
+        </div>
+    </div>
+</div>
