--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
       <%= link_to 'Terrier'%>
       <%= link_to 'Working'%>
       <%= link_to 'Pastoral'%>
+      <%= link_to 'New Article', new_article_path%>
     </div>
     <div class="nav-sess">
       <%= link_to 'Log in', sign_in_path %>
