--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,7 +28,7 @@
      margin-right: auto;
      margin-top: 20px;
      margin-bottom: 20px;
-     width: 500px;
+     width: 700px;
      border: 0;
  }
 
@@ -58,7 +58,7 @@
  }
 
  footer{
-    position: absolute;
+   /** position: absolute;**/
     bottom: 0;
     width: 100%;
     height: 75px; 
