article show view

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -14,8 +14,8 @@
     <%= select_tag :categories, options_for_select(@categories), class: 'input' %>
   </div>
   <div>
-  <%= f.label :image %>
-  <%= f.file_field :content, class: "input" %>
+  <%= f.label :avatar %>
+  <%= f.file_field :avatar, class: "input" %>
   </div>
   <%= f.submit %>
   <% end %>
