--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,16 +1,31 @@
-<div>
-    <h1>CatIndex</h1>
+<h1>Categories#show</h1>
+<p>Find me in app/views/categories/show.html.erb</p>
 
-    <div class="nav">
-        <div class="nav-cat">
-            <%= link_to 'Gun'%>
-            <%= link_to 'Toy'%>
-            <%= link_to 'Utility'%>
-            <%= link_to 'Hound'%>
-            <%= link_to 'Terrier'%>
-            <%= link_to 'Working'%>
-            <%= link_to 'Pastoral'%>
+
+
+
+
+
+
+<!-- <div class="art-container">
+    <div class="top-container">
+        <div class="main-article">
+            main
         </div>
-        
+        <div class="right-articles">
+            <div class="article">
+                a
+            </div>
+            <div class="article">
+            </div>
+        </div>
     </div>
-</div>
+    <div class="bot-container">
+        <div class="article">
+        </div>
+        <div class="article">
+        </div>
+        <div class="article">
+        </div>
+    </div>
+</div>-->
