--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,6 +30,9 @@
      margin-bottom: 20px;
      width: 7rai00px;
      border: 0;
+     display: flex;
+     justify-content: space-between;
+     width: 300px;
  }
 
  .nav-cat a{
@@ -86,11 +89,6 @@
     display: flex;
     align-items: center;
     width: 50%;
- }
- 
- .dropdown {
-   position: relative;
-   display: inline-block;
  }
  
  .dropdown-content {
