--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,14 @@
     <div class="nav-cat">
       <%= link_to 'New Category', new_category_path%>
       <%= link_to 'New Article', new_article_path%>
+      <div class="dropdown">
+        categories
+        <div class="dropdown-content">
+          <% @categories.each do |c| %>
+          <%= link_to "#{c.name}", category_path(c) %>
+          <% end %>
+        </div>
+      </div>
     </div>
     <div class="nav-sess">
       <%= link_to 'Log in', sign_in_path %>
