--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -15,6 +15,8 @@
           <p class="art-content">
             <%= art.content %>
           </p>
+          <%= display_vote(art) %>
+          <%= current_user.name %>
         </div>
       </div>
     </article>
