--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,94 +13,94 @@
  *= require_tree .
  *= require_self
  */
- body{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
- }
+body {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
 
- .nav{
-     width: 100%;
-     border-bottom: rgb(105, 103, 103) solid 1px;
-     display: flex;
- }
+.nav {
+  width: 100%;
+  border-bottom: rgb(105, 103, 103) solid 1px;
+  display: flex;
+}
 
- .nav-cat{
-     margin-left: auto;
-     margin-right: auto;
-     margin-top: 20px;
-     margin-bottom: 20px;
-     width: 7rai00px;
-     border: 0;
-     display: flex;
-     justify-content: space-between;
-     width: 300px;
- }
+.nav-cat {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 0;
+  display: flex;
+  justify-content: space-between;
+  width: 300px;
+}
 
- .nav-cat a{
-    margin-left: 2.57%;
-    margin-right: 2.57%;
- }
+.nav-cat a {
+  margin-left: 2.57%;
+  margin-right: 2.57%;
+}
 
- .nav a{
-    text-decoration: none;
-    color:rgb(105, 103, 103)
- }
+.nav a {
+  text-decoration: none;
+  color: rgb(105, 103, 103);
+}
 
- .nav a:hover{
-     color:rgb(209, 96, 51);
- }
+.nav-sess {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-right: 3%;
+  width: 130px;
+}
 
- .nav-sess{
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-right: 3%;
-    width:130px;
- }
+.contact a {
+  font-size: 23px;
+  margin: 0 5px;
+}
 
- .nav-sess a{
-    margin-right: 10px;
- }
+.nav-sess a {
+  margin-right: 10px;
+}
 
- footer{
-   /** position: absolute;**/
-    bottom: 0;
-    width: 100%;
-    height: 75px; 
-    background-color:pink;
-    display: flex;
- }
- footer div{
-    margin: 0px 30px;
- }
+.nav a:hover {
+  color: rgb(209, 96, 51);
+}
 
- .contact{
-     display: flex;
-     align-items: center;
-     width: 50%;
-     float: right;
-    justify-content: flex-end;
- }
+footer {
+  /** position: absolute; **/
+  bottom: 0;
+  width: 100%;
+  height: 75px;
+  background-color: pink;
+  display: flex;
+}
 
- .contact a{
-     font-size: 23px;
-     margin: 0px 5px;
- }
+footer div {
+  margin: 0 30px;
+}
 
- .created{
-    display: flex;
-    align-items: center;
-    width: 50%;
- }
- 
- .dropdown-content {
-   display: none;
-   position: absolute;
-   background-color: #f9f9f9;
-   min-width: 160px;
-   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-   padding: 12px 16px;
-   z-index: 1;
- }
- 
- .dropdown:hover .dropdown-content {
-   display: block;
- }
+.contact {
+  display: flex;
+  align-items: center;
+  width: 50%;
+  float: right;
+  justify-content: flex-end;
+}
+
+.created {
+  display: flex;
+  align-items: center;
+  width: 50%;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
