logout button when signed in

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,8 +27,12 @@
       </div>
     </div>
     <div class="nav-sess">
+    <% if user_signed_in?%>
+    <%= link_to 'Sign out', log_out_path%>
+    <% else %>
       <%= link_to 'Log in', sign_in_path %>
       <%= link_to 'Register', new_user_path %>
+      <% end %>
     </div>
 
   </div>
