--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,5 @@
-<article>
+<div class="bg">
+<article class="main-container">
 <h1>
 <%= @article.title %>
 </h1>
@@ -10,3 +11,4 @@
 </div>
 <%= link_to 'destroy', article_path(@article.id), method: :delete %>
 </article>
+</div>
