--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,5 @@
-<main>
+<div class="bg">
+<main class="main-container">
 
 <%= render 'first' %>
 <% @categories.each do |cat| %>
@@ -18,3 +19,4 @@
 <% end %>
 
 </main>
+</div>
