--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,5 +1,6 @@
+<div class="bg">
 <h1>Categories#new</h1>
-<div>
+
   <%= form_with model: @category, class: 'form' do |f| %>
     <div>
       <%= f.label :name %>
