--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
+<div class="bg">
 <div class="container">
   <%= form_with model: @user, class: 'form' do |f| %>
     <div class="field">
@@ -12,4 +13,5 @@
     <%= f.submit %>
     </div>
   <% end %>
+</div>
 </div>
