--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,12 +15,22 @@
  */
 body {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  margin: 0;
+}
+
+.bg{
+  background-color: rgb(75, 75, 75);
+}
+
+.main-container{
+  margin: 0px 20px;
 }
 
 .nav {
   width: 100%;
   border-bottom: rgb(105, 103, 103) solid 1px;
   display: flex;
+  background-color: rgb(206, 206, 206);
 }
 
 .nav-cat {
@@ -69,7 +79,7 @@ footer {
   bottom: 0;
   width: 100%;
   height: 75px;
-  background-color: pink;
+  background-color: rgb(206, 206, 206);
   display: flex;
 }
 
