--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,5 @@
+<div class="bg">
 <h1>Article</h1>
-<div>
   <%= form_with model: @article, class: 'form' do |f| %>
     <div>
       <%= f.label :title, class: "label | text-is-white" %>
