--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,4 +1,4 @@
-
+<div class="main-container">
   <% @articles.each do |art| %>
     <article class="d-flex">
     <div class="art-image">
@@ -23,3 +23,4 @@
       </div>
     </article>
   <% end %>
+  </div>
