--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,7 +2,7 @@
   <% @articles.each do |art| %>
     <article class="d-flex">
     <div class="art-image">
-      <%= image_tag(url_for(display_image(art))) %>
+      <%# =image_tag(url_for(display_image(art))) %>
       </div>
       <div class="card-info">
         <h2 class="cat-name">
