--- a/app/views/categories/_first.html.erb
+++ b/app/views/categories/_first.html.erb
@@ -1,12 +1,12 @@
  
 <div class="banner">
   <%= link_to article_path(@voted_article) do %>
-  <%= image_tag(url_for(display_image(@voted_article)), class: 'banner__img') %>
-  <div class="banner__content">
-    <h1 class="banner__content-title">
+  <%= image_tag(url_for(display_image(@voted_article))) %>
+  <div >
+    <h1>
       <%= @voted_article.title %>
     </h1>
-    <p class="banner__content-description">
+    <p>
       <%= truncated_text(@voted_article.content) %>
     </p>
   </div>
