--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,9 +44,9 @@
     </div>
     <div class="contact">
       <p>Contact Me</p>
-      <a><i class="fab fa-github"></i></a>
-      <a><i class="fab fa-linkedin"></i></a>
-      <a><i class="fab fa-instagram"></i></a>
+      <a href="https://github.com/NataJenkins"><i class="fab fa-github"></i></a>
+      <a href="https://github.com/natalia-macias96"><i class="fab fa-linkedin"></i></a>
+      <a href="https://instagram.com/NataJenkins"><i class="fab fa-instagram"></i></a>
     </div>
   </footer>
 </body>
