--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -23,4 +23,5 @@
       </div>
     </article>
   <% end %>
+  <%= link_to 'destroy category', category_path(@category.id), method: :delete %>
   </div>
