--- a/app/assets/stylesheets/categories.css
+++ b/app/assets/stylesheets/categories.css
@@ -54,6 +54,10 @@
   margin-left: 10px;
 }
 
+.banner img {
+  width: 100%;
+}
+
 .cat-art-image img:first-of-type {
   height: 300px;
   width: 300px;
@@ -71,5 +75,12 @@
 
 .d-flex {
   display: flex;
+  margin-top: 20px;
+}
+
+.index-banner {
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 20px;
 }
