--- a/app/views/categories/_first.html.erb
+++ b/app/views/categories/_first.html.erb
@@ -2,7 +2,7 @@
 <div class="banner">
   <%= link_to article_path(@voted_article) do %>
   <%= image_tag(url_for(display_image(@voted_article))) %>
-  <div >
+  <div class="banner-txt">
     <h1>
       <%= @voted_article.title %>
     </h1>
