--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
 <body>
   <div class="nav">
     <div class="nav-cat">
+      <%= link_to 'Home', categories_path%>
       <%= link_to 'New Category', new_category_path%>
       <%= link_to 'New Article', new_article_path%>
       <div class="dropdown">
