--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,11 +16,18 @@
 body {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   margin: 0;
+  position: relative;
 }
 
 a {
   color: black;
   text-decoration: none;
+}
+
+.bg{
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .main-container {
