--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -38,7 +38,7 @@ a {
 
 .nav {
   width: 100%;
-  border-bottom: rgb(105, 103, 103) solid 1px;
+  border-bottom: rgb(105, 103, 103) solid 3px;
   display: flex;
   background-color: white;
 }
@@ -89,7 +89,7 @@ footer {
   bottom: 0;
   width: 100%;
   height: 75px;
-  background-color: white;
+  background-color: rgb(105, 103, 103);
   display: flex;
   border-top: 1px solid black;
   z-index: 20;
