--- a/app/assets/stylesheets/categories.css
+++ b/app/assets/stylesheets/categories.css
@@ -63,11 +63,10 @@
   object-fit: fill;
   position: relative;
   text-align: center;
-  
 }
 
 .cat-art-image img {
-  content:'';
+  content: '';
   height: 100%;
   width: 100%;
 }
@@ -78,7 +77,7 @@
   z-index: 2;
   top: 0;
   margin-left: 20px;
-  color:white
+  color: white;
 }
 
 .d-flex {
